<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TabDates">

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical"
            android:layout_below="@+id/relOne"
            android:background="#dedede">

        <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/relTwo"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="10dp"
                tools:context=".ActivityInfo"
                android:background="#dedede">

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/relLayoutFive"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginLeft="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/white_rounded_corners">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Arrival Date :"
                        android:id="@+id/textCheckInFrag"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="0dp"
                        android:paddingLeft="0dp"
                        android:gravity="center_vertical"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignBottom="@+id/imageCheckInFrag"/>

                <ImageButton
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:src="@drawable/ic_action_go_to_today"
                        android:background="#ffffff"
                        android:focusableInTouchMode="false"
                        android:id="@+id/imageCheckInFrag"
                        android:layout_marginRight="5dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"/>

                <ImageButton
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:id="@+id/imageCheckOutFrag"
                        android:src="@drawable/ic_action_go_to_today"
                        android:background="#ffffff"
                        android:layout_marginRight="5dp"
                        android:layout_alignTop="@+id/textCheckOutFrag"
                        android:layout_alignLeft="@+id/imageCheckInFrag"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Departure Date :"
                        android:id="@+id/textCheckOutFrag"
                        android:layout_below="@+id/imageCheckInFrag"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="15dp"
                        android:paddingLeft="0dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/abc_ab_bottom_transparent_light_holo"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Number of Nights :"
                        android:id="@+id/textnumNightsFrag"
                        android:paddingLeft="0dp"
                        android:gravity="center_vertical"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/abc_ab_bottom_transparent_light_holo"
                        android:layout_below="@+id/textCheckOutFrag"/>

                <TextView
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="0"
                        android:id="@+id/textNightsValue"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_alignTop="@+id/textnumNightsFrag"
                        android:layout_alignRight="@+id/imageCheckOutFrag"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textDepartureValue"
                        android:gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:layout_alignTop="@+id/imageCheckOutFrag"
                        android:layout_toLeftOf="@+id/imageCheckOutFrag"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textArrivalValue"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/imageCheckInFrag"
                        android:gravity="center_vertical"/>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/relLayoutSix"
                    android:layout_below="@+id/relLayoutFive"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginLeft="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/white_rounded_corners">


                <TextView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Room Type :"
                        android:id="@+id/textView4"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="15dp"
                        android:paddingLeft="0dp"
                        android:gravity="center_vertical"
                        android:layout_alignParentRight="true"/>

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Rate Type :"
                        android:id="@+id/textView5"
                        android:layout_below="@+id/textView4"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="15dp"
                        android:paddingLeft="0dp"
                        android:gravity="center_vertical"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/abc_ab_bottom_transparent_light_holo"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Room Rate :"
                        android:id="@+id/textRoomRateFrag"
                        android:layout_below="@+id/textView5"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="15dp"
                        android:paddingLeft="0dp"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:background="@drawable/abc_ab_bottom_transparent_light_holo"
                        android:layout_alignParentRight="true"/>

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Room Number :"
                        android:id="@+id/textRoomNumberFrag"
                        android:layout_below="@+id/textRoomRateFrag"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="15dp"
                        android:paddingLeft="0dp"
                        android:gravity="center_vertical"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/abc_ab_bottom_transparent_light_holo"/>


                <Spinner
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:id="@+id/spinnerRoomTypeFrag"
                        android:prompt = "@string/room_types"
                        android:dropDownVerticalOffset="30dp"
                        android:spinnerMode = "dialog"
                        android:layout_alignTop="@+id/textView4"
                        android:layout_alignLeft="@+id/spinnerRateTypeFrag"/>

                <Spinner
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:id="@+id/spinnerRateTypeFrag"
                        android:layout_alignTop="@+id/textView5"
                        android:prompt = "@string/rate_type"
                        android:dropDownVerticalOffset="30dp"
                        android:spinnerMode = "dialog"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="15dp"
                        android:layout_alignParentRight="true"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="$ 0.00"
                        android:id="@+id/textRateValueFrag"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_alignTop="@+id/textRoomRateFrag"
                        android:layout_alignLeft="@+id/spinnerRateTypeFrag"
                        android:layout_alignRight="@+id/spinnerRateTypeFrag"/>

                <Spinner
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:id="@+id/spinnerRoomNumberFrag"
                        android:layout_alignTop="@+id/textRoomNumberFrag"
                        android:prompt = "@string/room_number"
                        android:dropDownVerticalOffset="30dp"
                        android:spinnerMode = "dialog"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="15dp"
                        android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/relLayoutSeven"
                    android:layout_below="@+id/relLayoutSix"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginLeft="0dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/white_rounded_corners">
                <TextView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Adults : "
                        android:id="@+id/textView7"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"

                        android:paddingLeft="5dp"
                        android:gravity="center_vertical"
                        android:layout_alignParentRight="true"/>

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Cribs : "
                        android:id="@+id/textView8"
                        android:layout_below="@+id/textView7"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="15dp"
                        android:paddingLeft="5dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/abc_ab_bottom_transparent_light_holo"
                        android:layout_alignRight="@+id/textView7"/>

                <TextView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Rollaways : "
                        android:id="@+id/textView9"
                        android:layout_below="@+id/textView8"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="15dp"
                        android:paddingLeft="5dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/abc_ab_bottom_transparent_light_holo"
                        android:layout_alignRight="@+id/textView8"/>

                <Spinner
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:id="@+id/spinnerNumAdultsFrag"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="0dp"
                        android:prompt = "@string/num_adults"
                        android:dropDownVerticalOffset="30dp"
                        android:spinnerMode = "dialog"
                        android:layout_alignParentRight="true"
                        android:gravity="center_horizontal"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:id="@+id/spinnerNumCribsFrag"
                        android:layout_below="@+id/spinnerNumAdultsFrag"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_alignLeft="@+id/spinnerNumAdultsFrag"
                        android:layout_alignParentRight="true"
                        android:prompt = "@string/num_cribs"
                        android:dropDownVerticalOffset="30dp"
                        android:spinnerMode = "dialog"
                        android:gravity="center_horizontal"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:id="@+id/spinnerNumRollawaysFrag"
                        android:layout_alignTop="@+id/textView9"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="0dp"
                        android:prompt = "@string/num_rollaways"
                        android:dropDownVerticalOffset="30dp"
                        android:spinnerMode = "dialog"
                        android:layout_alignLeft="@+id/spinnerNumCribsFrag"
                        android:layout_alignParentRight="true"
                        android:gravity="center_horizontal"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
